# fugaso_protocol

./: Cargo.toml  rustfmt.toml
china_festival/: Cargo.toml
china_festival/src/: api.rs  lib.rs  loger.rs  main.rs  object_list.rs  utils.rs
china_festival/src/game/: actions.rs  settings.rs
fugaso_core/: .gitignore  Cargo.toml
fugaso_core/packets/china_festival/: 00-no_win.json  01-win.json  03-jackpots.json  10-boost.json  11-boost_after_double.json  12-boost_after_collect.json  14-boost_after_double_after_collect.json  15-boost_after_collect_after_double.json  16-boost_jackpot.json  17-boost_with_mystery_boost.json  171-boost_with_mystery_boost.json  18-boost_with_mystery_double.json  19-boost_with_mystery_collect.json  20-double.json  21-double_after_boost.json  22-double_after_collect.json  24-double_after_collect_after_boost.json  25-double_after_boost_after_collect.json  26-double_jackpot.json  27-double_with_mystery_double.json  28-double_with_mystery_boost.json  29-double_with_mystery_collect.json  30-collect.json  31-collect_after_double.json  32-collect_after_boost.json  34-collect_after_double_after_boost.json  35-collect_after_boost_after_double.json  36-collect_jackpot.json  37-collect_with_mystery_collect.json  38-collect_with_mystery_boost.json  39-collect_with_mystery_double.json  40-boost_and_double.json  41-boost_and_double_after_collect.json  42-double_and_collect.json  43-double_and_collect_after_boost.json  44-collect_and_boost.json  45-collect_and_boost_after_double.json  46-boost_and_double_and_collect.json
fugaso_core/packets/gladius_death_or_glory/: 00-no_win.json  01-win.json  02-fs.json  04-collect_collect_multi.json  05-buy_mod_shield_bet_200_line_1.json
fugaso_core/packets/grand_lightning/: 00-no_win.json  01-win.json  11-s-multi_2.json  20-fs-init_win_line.json  21-fs-init_win_line_col.json  23-fs-multi_5.json  24-fs-grand.json  25-fs-grand.json
fugaso_core/packets/source_big_bass_bonanza_1000/: 00-no_win.json
fugaso_core/packets/source_hold_and_win/: 00-no_win.json  02-fs.json  03-fs_tree_train.json  bet_200_line_1_c99f22c4e09b4390b9f77369fa0371f2.json
fugaso_core/packets/thor_hit_the_bonus/: 00-no_win.json  bg_type_0.json  bg_type_1.json  bg_type_10.json  bg_type_2.json  bg_type_3.json  bg_type_5.json  bg_type_6.json  bg_type_7.json  новый 8.json.bak
fugaso_core/packets/three_aztec_temples/: 00-no_win.json  01-win.json  10-boost.json  11-boost_next_collect.json  12-boost_next_mult.json  14-boost_next_collect_next_mult.json  15-boost_next_mult_next_collect.json  20-collect.json  21-collect_next_boost.json  24-collect_next_mult_next_boost.json  25-collect_next_boost_next_mult.json  30-mult.json  30-mult_x3.json  33-mult_next_boost_and_collect.json  34-mult_next_collect_next_boost.json  35-mult_next_boost_next_collect.json  40-boost_and_collect.json  41-boost_and_collect_next_mult.json  43-collect_and_mult_next_boost.json  44-mult_and_boost.json  45-mult_and_boost_next_collect.json  50-boost_and_collect_and_mult.json  (+7 more)
fugaso_core/src/: lib.rs  protocol.rs  proxy.rs  tournament.rs
fugaso_core/tests/: big_bass_bonanza_1000_test.rs  hold_and_win_link_test.rs  integration.rs  mega_thunder_link_test.rs  template_link_test.rs  trinity_egypt_link_test.rs  trinity_power_link_test.rs  trinity_thor_link_test.rs  zeus_extreme_link_test.rs
fugaso_math/: Cargo.toml
fugaso_math/src/: lib.rs  math.rs  protocol.rs  protocol_big_bass_bonanza_1000.rs  protocol_hold_and_win.rs  protocol_mega_thunder.rs  protocol_new_game_name.rs  protocol_thor.rs  protocol_zeus.rs
server/: Cargo.toml
server/src/: games_list.rs  http_errors.rs  lib.rs  main.rs
server/tests/: app.rs  reels.rs
(+174 files in other folders)
