[workspace]
resolver = "2"
members = [
    "server",
    "china_festival",
    "essential_core",
    "fugaso_core",
    "fugaso_math",
    "fugaso_data", 
    "essential_async",
]

[workspace.dependencies]
lazy_static = "1.4.0"
async-trait = "0.1.68"
log = "0.4.17"
log4rs = "1.2.0"
serde_json = "1.0.96"
maplit = "1.0.2"
uuid = { version = "1.3.1", features = ["v4"] }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json", "time", "bigdecimal"] }
reqwest = { version = "0.12.12", features = ["stream", "rustls-tls", "json"], default-features = false }
mockall = "0.13.1"
chrono = "0.4.39"
num-traits = "0.2.15"
