[package]
name = "china_festival"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4"}
actix-files = "0.6"
env_logger = "0.10"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14"
bigdecimal = "0.3"
uuid = { version = "1.3", features = ["v5", "serde"] }
rand = "0.8"
log = "0.4"
chrono = "0.4"
#sea-orm = { version = "0.10", features = ["sqlx-postgres"] }
#sea-orm-macros = "0.10"
sqlx = { workspace = true }
sea-orm = { workspace = true }
maplit = "1.0"
mockall = "0.11"
pretty_assertions = "1.3"
indicatif = "0.17"