[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4" }
actix-files = "0.6"
env_logger = "0.10"
dotenv = "0.15"
#openssl = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14"
bigdecimal = "0.3"
uuid = { version = "1.3", features = ["v5", "serde"] }
rand = "0.8"
log = "0.4"
chrono = "0.4"
#sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "json", "time", "bigdecimal"] }
#sea-orm = { version = "0.10", features = ["sqlx-postgres"] }
#sea-orm-macros = "0.10"
sqlx = { workspace = true }
sea-orm = { workspace = true }
maplit = "1.0"
mockall = "0.11"
pretty_assertions = "1.3"
indicatif = "0.17"
strum = "0.24"
strum_macros = "0.24"
once_cell = "1.19"
regex = "1"